k8s/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieflixapp
  namespace: lambdasys-movieflix
  labels:
    app: movieflixapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movieflixapp
  template:
      metadata:
        labels:
          app: movieflixapp
      spec:
        containers:
          - name: movieflixapp
            image: java-k8s:latest
            imagePullPolicy: Never
            ports:
              - containerPort: 8080
                name: http
            livenessProbe:
              httpGet:
                path: /movieflix/actuator/health/liveness
                port: 8080
              initialDelaySeconds: 30
            readinessProbe:
              httpGet:
                path: /movieflix/actuator/health/readiness
                port: 8080
              initialDelaySeconds: 30
            resources:
              requests:
                memory: "512Mi"
                cpu: "0.5"
              limits:
                memory: "1024Mi"
                cpu: "1"
