k8s/app/app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: movieflixapp
  namespace: lambdasys-movieflix
spec:
  selector:
    app: movieflixapp
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
