k8s/app/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: movieflixapp
  namespace: lambdasys-movieflix
spec:
  rules:
    - host: dev.local
      http:
        paths:
          - path: /movieflix
            backend:
              serviceName: movieflixapp
              servicePort: 8080
